# Biblioteca-Itinerante-

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/usuarios/: cadastrar.html  exclusao_conta.html  login.html  perfil.html
biblioteca/: admin.py  forms.py  models.py  views.py
biblioteca/fixtures/: load_data.json
biblioteca/migrations/: 0001_initial.py
biblioteca/templates/biblioteca/: index.html
core/: settings.py  urls.py
templates/: base.html
templates/includes/: paginator.html
